<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/activity_quiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"


        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.gteckkdevelopers.solvethis.QuizPanel">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_flat"
            android:padding="16dp"

            android:scrollbarSize="10dp">

            <TextView
                android:id="@+id/score_text"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/score_panel_view"
                android:textColor="#fff"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="0"
                android:textColor="#fff"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="16dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/question_one"
                android:textColor="@android:color/black"
                android:textSize="17sp" />

            <RadioGroup
                android:id="@+id/radioOne"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="0dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/qOneChoice1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioBtnCheckQuestionOne"
                    android:padding="8dp"
                    android:text="@string/q_one_choice1"
                    android:textColor="#000"
                    app:buttonTint="@color/colorPrimary" />

                <RadioButton
                    android:id="@+id/qOneChoice2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:onClick="onRadioBtnCheckQuestionOne"
                    android:padding="8dp"
                    android:text="@string/q_one_choice2"
                    android:textColor="#000"
                    app:buttonTint="@color/colorPrimary" />

                <RadioButton
                    android:id="@+id/qOneChoice3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:onClick="onRadioBtnCheckQuestionOne"
                    android:padding="8dp"
                    android:text="@string/q_one_choice3"
                    android:textColor="#000"
                    app:buttonTint="@color/colorPrimary" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="16dp"
            android:weightSum="1">


            <TextView
                android:id="@+id/question_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_weight="0.47"
                android:text="@string/question_two"
                android:textColor="@android:color/black"
                android:textSize="17sp" />

            <RadioGroup
                android:id="@+id/radioTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/qTwoChoice1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioBtnCheckQuestionTwo"
                    android:padding="8dp"
                    android:text="@string/q_two_choice1"
                    android:textColor="#000"
                    app:buttonTint="@color/colorPrimary" />

                <RadioButton
                    android:id="@+id/qTwoChoice2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:onClick="onRadioBtnCheckQuestionTwo"
                    android:padding="8dp"
                    android:text="@string/q_two_choice2"
                    android:textColor="#000"
                    app:buttonTint="@color/colorPrimary" />

                <RadioButton
                    android:id="@+id/qTwoChoice3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:onClick="onRadioBtnCheckQuestionTwo"
                    android:padding="8dp"
                    android:text="@string/q_two_choice3"
                    android:textColor="#000"
                    app:buttonTint="@color/colorPrimary" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="1">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="0.32"
                android:text="@string/question_three"
                android:textColor="@android:color/black"
                android:textSize="17sp" />

            <RadioGroup
                android:id="@+id/radioThree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="vertical"
                android:weightSum="1">

                <RadioButton
                    android:id="@+id/qThreeChoice1"
                    android:layout_width="289dp"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioBtnCheckQuestionThree"
                    android:padding="8dp"
                    android:text="@string/q_three_choice1"
                    android:textColor="#000"
                    app:buttonTint="@color/colorPrimary" />

                <RadioButton
                    android:id="@+id/qThreeChoice2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:onClick="onRadioBtnCheckQuestionThree"
                    android:padding="8dp"
                    android:text="@string/q_three_choice2"
                    android:textColor="#000"
                    app:buttonTint="@color/colorPrimary" />

                <RadioButton
                    android:id="@+id/qThreeChoice3"
                    android:layout_width="291dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1.23"
                    android:onClick="onRadioBtnCheckQuestionThree"
                    android:padding="8dp"
                    android:text="@string/q_three_choice3"
                    android:textColor="#000"
                    app:buttonTint="@color/colorPrimary" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.07"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/question_four"
                android:textColor="@android:color/black"
                android:textSize="17sp" />


            <CheckBox
                android:id="@+id/box_choice1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"

                android:onClick="onCheckBoxQuestion4"
                android:text="@string/q_four_choice1"
                android:textSize="12sp" />

            <CheckBox
                android:id="@+id/box_choice2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:onClick="onCheckBoxQuestion4"
                android:text="@string/q_four_choice2"
                android:textSize="12sp" />

            <CheckBox
                android:id="@+id/box_choice3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:onClick="onCheckBoxQuestion4"
                android:text="@string/q_four_choice3"
                android:textSize="12sp" />

            <CheckBox
                android:id="@+id/box_choice4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:onClick="onCheckBoxQuestion4"
                android:text="@string/q_four_choice4"
                android:textSize="12sp" />
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/question_five"
            android:textColor="@android:color/black"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/edit_text_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:onClick="onQuestionFiveAnswer" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10dp">

            <Button
                android:id="@+id/reset"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"

                android:layout_marginTop="20dp"
                android:background="@drawable/round_button"

                android:padding="8dp"
                android:text="@string/reset_button"
                android:textColor="#fff" />

            <Button
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"

                android:background="@drawable/round_button"
                android:padding="8dp"
                android:text="@string/submit"
                android:textColor="#fff" />
        </RelativeLayout>

        <Button
            android:id="@+id/quit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:background="#B71C1C"
            android:padding="8dp"
            android:text="quit"
            android:textColor="#fff" />
    </LinearLayout>

</ScrollView>